# edac-utils

./: META  bootstrap  configure.ac  edac-utils-0.16.tar.gz.delta  edac-utils-0.16.tar.gz.id  edac-utils.spec  edac-utils_0.12.orig.tar.gz.delta  edac-utils_0.12.orig.tar.gz.id
config/: x_ac_debug.m4  x_ac_libsysfs.m4  x_ac_meta.m4
debian/: .gitignore  TODO  changelog  control  control.in  copyright  description.in  dh_wraporig.local  edac-utils.edac.init  edac-utils.install  edac-utils.maintscript  edac-utils.udev  libedac-dev.install  rules  watch
debian/patches/: 1000-appstream-metainfo.patch  deb_bogus_changelog  deb_init_script  series
src/: Makefile.am
src/etc/: Makefile.am  edac.init.in  labels.db
src/lib/: Makefile.am  edac.3.in  edac.h  libedac.c
src/util/: Makefile.am  edac-ctl.8.in  edac-ctl.in  edac-util.1.in  edac-util.c  list.c  list.h  split.c  split.h
