##***************************************************************************** 
## $Id: Makefile.am 2 2006-03-14 17:02:28Z grondo $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************
SUBDIRS = lib util etc
